[package]
name = "utsuki-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.6.1"
serenity = "0.12"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
rand = "0.8.5"

[profile.release]
strip = "symbols"
codegen-units = 16

[profile.ephemeral-build]
opt-level = 2
codegen-units = 8

